# akf-windows

./: .pre-commit-config.yaml  LICENSE  README.md  Vagrantfile  cat_urls.txt  pyproject.toml  test.py  thesis.py
.github/workflows/: publish_agent.yml
examples/: edge-example.py
playground/: Results.md  default.md  rendering.py
scenarios/: Results.md  sample.py  sample.yaml  sample_linted.py  sample_urls.txt  thesis.py  thesis.yaml
scenarios/ai_generated/: README.md  prompt_1.md  prompt_1.yaml  prompt_1_response.md  prompt_2.md  prompt_2.yaml  prompt_2_response.md  prompt_3.md  prompt_3.yaml  prompt_3_response.md
scenarios/fsidi/: Vagrantfile  scenario.py
scenarios/fsidi/ransomware/: README.md  pyproject.toml
scenarios/fsidi/ransomware/src/: decrypt.py  encrypt.py
src/akf_win/api/: os.py
src/akf_win/server/: chromium.py
src/akf_windows/api/: _base.py  artifacts.py  autogui.py  chromium.py
src/akf_windows/modules/: __init__.py  _base.py  artifacts.py  autogui.py  chromium.py
src/akf_windows/server/: __init__.py  _util.py  artifacts.py  autogui.py  chromium.py  input.py  main.py
src/akf_windows/server/prefetch/: __init__.py  utils.py  windowsprefetch.py
